refactor: Improve UI and responsiveness
Enhance the user interface with better responsiveness and visual appeal.
- Update `index.html` to use a lighter background color, centered layout, and dynamic styling for the root element.
- Modify `Header.tsx` to improve padding, introduce responsive font sizes, and display desktop navigation correctly.
- Refactor `Home.tsx` with increased padding, larger typography, and a more prominent input form.
- Update `Workspace.tsx` to remove hardcoded section styles, improving flexibility.
- Adjust `Methodology.tsx` for better spacing and responsive elements, centralizing content.
- Update dependencies to ensure compatibility.

--- a/index.html
+++ b/index.html
@@ -52,23 +52,19 @@
     </script>
     <style>
       body {
-        background-color: #111; /* Dark background to highlight the device frame */
+        background-color: #F9F9F7;
         color: #1A1A1A;
         font-family: 'Inter', sans-serif;
-        overscroll-behavior: none;
-        display: flex;
-        justify-content: center;
+        overscroll-behavior-y: none;
         min-height: 100vh;
         margin: 0;
       }
       #root {
         width: 100%;
-        max-width: 375px; /* STRICT MOBILE WIDTH */
-        background-color: #F9F9F7;
         min-height: 100vh;
-        box-shadow: 0 0 40px rgba(0,0,0,0.5);
-        overflow-x: hidden;
         position: relative;
+        display: flex;
+        flex-direction: column;
       }
       h1, h2, h3, h4, h5, h6 {
         font-family: 'Playfair Display', serif;
